--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,16 @@
 language: crystal
 crystal:
   - latest
+services:
+  - docker
 before_deploy:
   - mkdir bin
-  - crystal build src/haste.cr --release --stats --progress --no-debug -o bin/haste
+  - |
+    cat >> src/haste.cr <<EOF
+    require "llvm/lib_llvm"
+    require "llvm/enums"
+    EOF
+  - docker run --rm -it -v $PWD:/haste-client -w /haste-client jrei/crystal-alpine crystal build src/haste.cr --static --release --stats --progress -o bin/haste
   - tar -zcvf haste-client-$TRAVIS_TAG-linux-x86_64.tar.gz bin/haste
 deploy:
   provider: releases
